# rust-tonic-grpc-rocket-svc

./: .env  Cargo.toml  README.md  build.rs
proto/: rocket-launch.proto
protogen/: rockets.rs
